--- a/task1_3/task1_3.html
+++ b/task1_3/task1_3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="copy.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>三栏式布局</title>
   </head>
   <body>
